--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -8,7 +8,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
-  <connectionStrings></connectionStrings>
+  <connectionStrings>
+    <add name="EFDbContext" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=SportsStore;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
