--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -28,7 +28,12 @@
     <compilation debug="true" targetFramework="4.5.1" />
 
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Account/Login" timeout="2880" >
+        <credentials passwordFormat="Clear">
+          <user name="admin" password="secret" />
+        </credentials>
+      </forms>
+      
     </authentication>
 
     <pages>
